--- a/src/app/admin/components/products/list/list.component.html
+++ b/src/app/admin/components/products/list/list.component.html
@@ -24,6 +24,18 @@
       <th mat-header-cell *matHeaderCellDef> CreatedDate </th>
       <td mat-cell *matCellDef="let element"> {{element.createdDate}} </td>
     </ng-container>
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button (click)="onUpdate(element)">
+          <mat-icon>edit</mat-icon> <!-- Update ikonu -->
+        </button>
+        <button mat-icon-button (click)="onDelete(element.id)">
+          <mat-icon>delete</mat-icon> <!-- Delete ikonu -->
+        </button>
+      </td>
+    </ng-container>
+    
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
