--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,10 +16,14 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="baskets">Basket</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="register">Kayıt Ol</a>
+          </li>
      
           <li class="nav-item">
             <a class="nav-link disabled" aria-disabled="true">Disabled</a>
           </li>
+     
           <li routerLink="admin" class="btn btn-outline-success" type="search">Yönetim Paneli</li>
         </ul>
         <form class="d-flex" role="search">
