--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,9 @@
             <a class="nav-link active" aria-current="page" routerLink="baskets">Basket</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="login">Giriş Yap</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="register">Kayıt Ol</a>
           </li>
      
