--- a/src/app/admin/layout/components/header/header.component.html
+++ b/src/app/admin/layout/components/header/header.component.html
@@ -1,1 +1,14 @@
-<p>header works!</p>
+<div class="header">
+    <div *ngIf="isLoggedIn" class="session-time">
+        Kalan Süre: {{ remainingTime }}
+      </div>
+    <nav class="nav-right">
+      <ul>
+        <li>
+          <button class="logoutButton" (click)="logout()"><i class="bi bi-box-arrow-left"></i></button>
+        </li>
+      </ul>
+    </nav>
+    
+  </div>
+  
